--- a/app/views/persons/profile.html.erb
+++ b/app/views/persons/profile.html.erb
@@ -1,5 +1,6 @@
 <h1>Persons#profile</h1>
 <p>Find me in app/views/persons/profile.html.erb</p>
+<body data-no-turbolink="true">
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 <% if user_signed_in? %>
